tests/snapshots/example_templates_snapshots__auto_discovered_basic_test.snap
---
source: tests/example_templates_snapshots.rs
expression: output
---
name: test-app-dev
region: us-west-2
resources:
  - test-app-web-dev
  - test-app-api-dev
  - test-app-database-dev
config:
  name: test-app
  env: dev
  replicas: 3
  version: 1.0.0
