tests/snapshots/example_templates_snapshots__auto_discovered_import_test.snap
---
source: tests/example_templates_snapshots.rs
expression: output
---
name: import-demo-dev
database:
  host: db.example.com
  port: 5432
  name: myapp_db
api_config:
  version: v1
  timeout: 30
monitoring_enabled: true
